re-coded the mobile navigation menu to fix a bug where the links are still clickable even when not visible.

--- a/css/main.css
+++ b/css/main.css
@@ -151,9 +151,7 @@ li {
   clip: rect(0, 0, 0, 0); }
 
 .navtrigger:checked ~ .navbar {
-  opacity: 1;
-  height: 100%;
-  transition: opacity 0.4s; }
+  display: none; }
 
 .footnote {
   text-align: center;
@@ -163,8 +161,6 @@ li {
 .navbar {
   width: 100%;
   background: rgba(0, 0, 0, 0.7);
-  opacity: 0;
-  height: 0;
   display: block; }
   .navbar ul {
     width: 100%;
@@ -175,6 +171,19 @@ li {
 .inner {
   min-height: 13em;
   background: rgba(0, 0, 0, 0.7); }
+
+.txtblock {
+  background: white; }
+
+.fontwhite {
+  color: white; }
+
+.footer .fb {
+  background: lightblue; }
+.footer .in {
+  background: darkblue; }
+.footer .tw {
+  background: cyan; }
 
 #hero {
   background-image: url("../img/pexels-photo-51415.jpeg");
@@ -191,19 +200,6 @@ li {
   background-size: cover; }
   #hero2 p {
     color: white; }
-
-.txtblock {
-  background: white; }
-
-.fontwhite {
-  color: white; }
-
-.footer .fb {
-  background: lightblue; }
-.footer .in {
-  background: darkblue; }
-.footer .tw {
-  background: cyan; }
 
 /*
 @media screen and (min-width: 992px){
